# zkan

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  init-mongo.js
.github/workflows/: ci.yaml
docs/: DEVELOPMENT.md
src/: pyproject.toml  zkan.py
zkan/: database.py  pyproject.toml  pytest.ini  zkan.py
zkan/tests/: test_schemas.py  test_zkan.py  test_zkan.py~
